<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>net.algart</groupId>
    <artifactId>algart-scifio-bridge</artifactId>
    <version>1.5.1</version>

    <name>AlgART-SCIFIO bridge</name>
    <description>Module helping to use and test AlgART-TIFF together with io.scif:scifio</description>
    <url>http://algart.net/java/AlgART-TIFF/</url>

    <licenses>
        <license>
            <name>The MIT License (MIT)</name>
            <url>http://opensource.org/licenses/MIT</url>
        </license>
    </licenses>

    <developers>
        <developer>
            <name>Daniel Alievsky</name>
            <email>daniel@iskrael.org</email>
            <organization>AlgART laboratory</organization>
            <organizationUrl>http://algart.net</organizationUrl>
        </developer>
    </developers>

    <scm>
        <connection>scm:git:https://github.com/Daniel-Alievsky/algart-tiff.git</connection>
        <developerConnection>scm:git:https://github.com/Daniel-Alievsky/algart-tiff.git</developerConnection>
        <url>https://github.com/Daniel-Alievsky/algart-tiff.git</url>
    </scm>

    <properties>
        <maven.compiler.release>21</maven.compiler.release>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>
    <dependencies>
        <dependency>
            <groupId>net.algart</groupId>
            <artifactId>algart-tiff</artifactId>
            <version>${project.version}</version>
        </dependency>
        <!-- test scope dependency -->
        <dependency>
            <groupId>net.algart</groupId>
            <artifactId>algart-tiff</artifactId>
            <version>${project.version}</version>
            <classifier>tests</classifier>
            <type>test-jar</type>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>io.scif</groupId>
            <artifactId>scifio</artifactId>
            <version>0.47.0</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.3.1</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <!-- Signing JARs by GnuPG (requirement of Maven Central) -->
            <!-- Please ACTIVATE this profile before deployment! -->
            <id>release-maven-central</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-javadoc-plugin</artifactId>
                        <version>3.11.2</version>
                        <configuration>
                            <release>${maven.compiler.release}</release>
                            <encoding>UTF-8</encoding>
                            <doclint>none</doclint>
                        </configuration>
                        <executions>
                            <execution>
                                <id>attach-javadoc</id>
                                <goals>
                                    <goal>jar</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-gpg-plugin</artifactId>
                        <version>3.2.8</version>
                        <executions>
                            <execution>
                                <id>sign-artifacts</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.sonatype.central</groupId>
                        <artifactId>central-publishing-maven-plugin</artifactId>
                        <version>0.8.0</version>
                        <extensions>true</extensions>
                        <configuration>
                            <publishingServerId>central</publishingServerId>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
            <distributionManagement>
                <repository>
                    <id>central</id>
                    <name>Central Publishing Portal Releases</name>
                    <url>https://central.sonatype.com/api/v1/publisher/upload</url>
                </repository>
                <snapshotRepository>
                    <id>central</id>
                    <name>Central Publishing Portal Snapshots</name>
                    <url>https://central.sonatype.com/api/v1/publisher/upload</url>
                </snapshotRepository>
            </distributionManagement>
        </profile>
    </profiles>

    <repositories>
        <repository>
            <!-- Repository of SCIFIO -->
            <id>scijava.public</id>
            <url>https://maven.scijava.org/content/groups/public</url>
        </repository>
    </repositories>
</project>